--- a/README.org
+++ b/README.org
@@ -1,3 +1,17 @@
+#+TITLE: AggLayer End to End Tests
+#+DATE:
+#+AUTHOR:
+#+EMAIL:
+#+CREATOR:
+#+DESCRIPTION:
+
+
+#+OPTIONS: toc:nil
+#+LATEX_HEADER: \usepackage{geometry}
+#+LATEX_HEADER: \usepackage{lmodern}
+#+LATEX_HEADER: \geometry{left=1in,right=1in,top=1in,bottom=1in}
+#+LaTeX_CLASS_OPTIONS: [letterpaper]
+
 The TLDR for getting started is that these tests are based on a [[https://en.wikipedia.org/wiki/Test_Anything_Protocol][TAP]]
 compatible tool called [[https://github.com/bats-core/bats-core][Bats]]. All of the tests are small bash
 scripts. If the test exits with a non-zero exit code, the test
