--- a/README.org
+++ b/README.org
@@ -49,9 +49,10 @@ bats tests/agglayer/bridges.bats --filter-tags agglayer,rpc
 #+end_src
 
 If you just want to run like CI does, you can use the following command:
+
 #+begin_src bash
 act --container-options "--group-add $(stat -c %g /var/run/docker.sock)" -s GITHUB_TOKEN=$ACT_GITHUB_TOKEN workflow_call
-#+end_src bash
+#+end_src
 
 * Philosophy and Goals
 
