--- a/README.org
+++ b/README.org
@@ -12,6 +12,8 @@
 #+LATEX_HEADER: \geometry{left=1in,right=1in,top=1in,bottom=1in}
 #+LaTeX_CLASS_OPTIONS: [letterpaper]
 
+To directly view the Tests Inventory, refer to the [[#tests-inventory][Tests Inventory]] section
+
 The TLDR for getting started is that these tests are based on a [[https://en.wikipedia.org/wiki/Test_Anything_Protocol][TAP]]
 compatible tool called [[https://github.com/bats-core/bats-core][Bats]]. All of the tests are small bash
 scripts. If the test exits with a non-zero exit code, the test
@@ -271,3 +273,7 @@ command:
 #+begin_src bash
 act --container-options "--group-add $(stat -c %g /var/run/docker.sock)" -s GITHUB_TOKEN=$ACT_GITHUB_TOKEN workflow_call
 #+end_src
+
+* Tests Inventory
+
+Refer to the [[./TESTSINVENTORY.md][Tests Inventory]] file for a list of integrated and WIP tests.
